--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <div>
-      <head>
-        Hello, world!
-      </head>
+      <header>Hello, world!</header>
     </div>
   </body>
 </html>
