--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div>
-      <header>Hello, world!</header>
-    </div>
+    <h1>About Jovian</h1>
+    <p>
+      At Jovian, we're on a mission to build the world's most highly reputed
+      technical university, and we're building it completely online. We offer
+      several beginner friendly courses that are taken by 300,000+ registered
+      users.
+    </p>
+    <h2>Job Opportunities</h2>
+<div>
+    <h3>Frontend Developer</h3>
+    <span>Bengaluru, India</span>
+</div>
+<div>
+    <h3>Backend Developer</h3>
+    <span>Delhi, India</span>
+</div>
+<div>
+    <h3>Data Scientist</h3>
+    <span>Mumbai, India</span>
+</div>cientist</h3>
   </body>
 </html>
