--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
       technical university, and we're building it completely online. We offer
       several beginner friendly courses that are taken by 300,000+ registered
       users.
-    </p>
+    </p><p>We also offer 2 industry-focused bootcamps:
+    <ol>
+       <li>
+        <a target="_blank" href="https://jovian.com/program/jovian-full-stack-developer-bootcamp">
+        Jovian Full Stack Developer Bootcamp</a></li> 
+       <li><a target="_blank" href="https://jovian.com/learn/zero-to-data-analyst-bootcamp">Jovian Data Science Bootcamp</a></li>
+    </ol>
+</p>
     <h2>Job Opportunities</h2>
 <div>
     <h3>Frontend Developer</h3>
@@ -26,6 +33,14 @@
 <div>
     <h3>Data Scientist</h3>
     <span>Mumbai, India</span>
-</div>cientist</h3>
+</div>Data scientist</h3>
+<div>
+  <ul>
+  <li><a target="_blank" href="https://jovian.com/learn">Courses</a></li>
+  <li><a target="_blank" href="https://jovian.com/learn">Programs</a></li>
+  <li><a target="_blank" href="https://youtube.com/@jovianhq">Youtube</a></li>
+</ul>
+</div>
+<span>© 2024 Jovin</span>
   </body>
 </html>
