--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <img src="christin-hume-Hcfwew744z4-unsplash.jpg" alt="career image" width="360px">
     <h1>About Jovian</h1>
     <p>
       At Jovian, we're on a mission to build the world's most highly reputed
@@ -21,6 +22,7 @@
        <li><a target="_blank" href="https://jovian.com/learn/zero-to-data-analyst-bootcamp">Jovian Data Science Bootcamp</a></li>
     </ol>
 </p>
+<img src="annie-spratt-sggw4-qDD54-unsplash.jpg" alt="team" height="200">
     <h2>Job Opportunities</h2>
 <div>
     <h3>Frontend Developer</h3>
@@ -41,6 +43,6 @@
   <li><a target="_blank" href="https://youtube.com/@jovianhq">Youtube</a></li>
 </ul>
 </div>
-<span>© 2024 Jovin</span>
+<span>© 2024 Jovian</span>
   </body>
 </html>
